Status update: PrimeDay

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 2023-07-12 11:15
+  text: "Hoy es el último día de PrimeDay y no os voy a recomendar cacharros que nunca usaréis. Mejor os dejo algunas recomendaciones de libros 👉🏼 📚"
+  link: https://www.ebenimeli.org/pages/bookshelf.html
+  cat: 'urgent'
+
 - timestamp: 2023-07-05 18:52
   text: "Cuenta atrás..."
   link: https://www.ebenimeli.org/pages/log.html
