--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 2023-07-15 21:11
+  text: "Nos ha dejado Francisco Ibáñez"
+  link: https://www.elmundo.es/cultura/comic/2023/07/15/64b2b06cfdddff16148b45a6.html
+  cat: 'urgent'
+
 - timestamp: 2023-07-12 11:15
   text: "Hoy es el último día de PrimeDay y no os voy a recomendar cacharros que nunca usaréis. Mejor os dejo algunas recomendaciones de libros 👉🏼 📚"
   link: https://www.ebenimeli.org/pages/bookshelf.html
