--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,10 +1,10 @@
-- date: 19/04/2023
+- date: 19/07/2023
+  write: 100
   day: We
-  riseearly: '06:13'
+  riseearly: ''
   sleep: 7.5
   read: 10
   lang: 0
-  write: 0
   walk: 9.05
   chess: 0
   getridof: 0
@@ -15,53 +15,3 @@
   journal: 'no'
   family: 'yes'
 
-- date: 18/04/2023
-  day: Tu
-  riseearly: '06:11'
-  sleep: 7.5
-  read: 10
-  lang: 0
-  write: 0
-  walk: 5.17
-  chess: 0
-  getridof: 0
-  getridof_t: '(0)'
-  declutter: 0
-  screentime: 0
-  gtd: 'yes'
-  journal: 'no'
-  family: 'yes'
-
-- date: 17/04/2023
-  day: Mo
-  riseearly: '06:05'
-  sleep: 7.5
-  read: 60
-  lang: 0
-  write: 243
-  walk: 1.13
-  chess: 0
-  getridof: 0
-  getridof_t: '(0)'
-  declutter: 0
-  screentime: 0
-  gtd: 'yes'
-  journal: 'no'
-  family: 'yes'
-
-- date: 16/04/2023
-  riseearly: '07:41'
-  sleep: 8.25
-  day: Su
-  read: 60
-  lang: 25
-  write: 200
-  walk: 1.2
-  chess: 1
-  getridof: 1
-  getridof_t: '(0)'
-  declutter: 25
-  screentime: 10
-  gtd: 'no'
-  journal: 'no'
-  family: 'yes'
