--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,5 +1,5 @@
 - timestamp: 2023-08-25 08:00
-  text: "Herramientas, métodos y enfoque"
+  text: "Nuevo artículo en el blog: «Herramientas, métodos y enfoque»"
   link: https://www.ochoenpunto.com/herramientas-metodos-y-enfoque/
   cat: 'status'
 
