--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,13 @@
 site: www.ebenimeli.org
 title: Enrique Benimeli
 keywords: ebenimeli, blog
-description: >-
+description: >- 
   Enrique Benimeli - web personal
 lang: es-ES
 timezone:  Europe/Madrid
 #repo: https://github.com/onepase/Ephesus # site repo [optional]
-google_verify:      XXX # Put your Google Verification here
-google_analytics:   UA-XXXXXXXX-00 # Put your Google Analytics code
+#google_verify:      XXX # Put your Google Verification here
+#google_analytics:   UA-XXXXXXXX-00 # Put your Google Analytics code
 #discus-identifier:  XXX
 
 # Author settings
