--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,5 +1,10 @@
+#- timestamp: 2023-09-03 07:00
+#  text: "Nuevo post: «Entradillas en el blog: WordPress excerpt»"
+#  link: https://www.ebenimeli.org/entradillas-8am
+#  cat: 'status'
+
 - timestamp: 2023-09-02 08:00
-  text: "Nuevo post: Parot"
+  text: "Viendo «Parot»: El Traslado (S01E04)"
   link: https://www.ebenimeli.org/parot-serie/
   cat: 'status'
 
