--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,7 +1,12 @@
+- timestamp: 2023-09-09 09:07
+  text: "Un devastador terremoto deja al menos 632 muertos y 329 heridos en Marrakech"
+  link: https://www.elmundo.es/internacional/2023/09/09/64fbb2aefdddff3fb48b458e.html
+  cat: 'urgent'
+
 - timestamp: 2023-09-08 08:00
   text: "Nuevo post: «31 consejos TIC para un primer día de clase sin sorpresas»"
   link: https://www.ochoenpunto.com/31-consejos-tic-profesores-checklist-primer-dia-clase/
-  cat: 'status'
+  cat: 'writing'
 
 - timestamp: 2023-09-03 07:00
   text: "Nuevo post: «Entradillas en el blog: WordPress excerpt»"
