--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,5 +1,5 @@
 - timestamp: 2023-09-09 09:07
-  text: "Un devastador terremoto deja al menos 632 muertos y 329 heridos en Marrakech"
+  text: "Al menos 1.037 muertos y 1.204 heridos en un terremoto de magnitud 7 en Marruecos"
   link: https://www.elmundo.es/internacional/2023/09/09/64fbb2aefdddff3fb48b458e.html
   cat: 'urgent'
 
