--- a/_data/books.yml
+++ b/_data/books.yml
@@ -12,13 +12,27 @@
   highlight:
   updated: "9 nov."
 
+- title: El desarrollo psicológico a lo largo de la vida
+  author: Coord. Mariscal, S., Giménez-Dasí, M., Carriedo, N. y Corral, A.
+  link: https://amzn.to/3FYANAh
+  image:
+  description:
+  genre: [educación]
+  completed: 2023
+  onpage: 19
+  pages: 405
+  synopsis: "El desarrollo psicológico a lo largo de la vida ofrece al lector-alumno un panorama actual, a la vez que comprensible y de fácil acceso, sobre la evolución psicológica del ser humano desde su nacimiento (incluso antes) hasta el final de la vida. La Psicología Evolutiva o Psicología del Desarrollo es una disciplina compleja que abarca los principales procesos de desarrollo que tienen lugar durante todo el ciclo vital. Los autores de esta obra han optado por una organización evolutiva de los contenidos, es decir, lejos de separar el desarrollo cognitivo-lingüístico por un lado y el desarrollo emocional y afectivo por otro, como es habitual en estos manuales, se presenta una sucesión de bloques relativos a las distintas etapas: el desarrollo temprano (del nacimiento hasta los dos años), la primera infancia (de los tres a los seis años), la etapa escolar y adolescencia y, finalmente, la vida adulta y la vejez. Dentro de cada bloque se diferencian los procesos de desarrollo: cognitivo, lingüístico, afectivo y social. Tras la lectura y estudio de los temas, el lector podrá elaborar el curso de desarrollo en sus distintas facetas dentro de cada etapa y, sobre todo, encontar las relaciones entre unas y otras."
+  cover: "psicodes.jpg"
+  highlight:
+  updated: "9 nov."
+
 - title: Hombres buenos
   author: Arturo Pérez-Reverte
   link: https://amzn.to/3P7kzKE
   image:
   description:
   genre: [novela]
-  completed: 
+  completed: 2023
   onpage: 287
   pages: 582
   synopsis: "A finales del siglo XVIII, cuando dos miembros de la Real Academia Española, el bibliotecario don Hermógenes Molina y el almirante don Pedro Zárate, recibieron de sus compañeros el encargo de viajar a París para conseguir de forma casi clandestina los 28 volúmenes de la Encyclopédie de D'Alembert y Diderot, que estaba prohibida en España, nadie podía sospechar que los dos académicos iban a enfrentarse a una peligrosa sucesión de intrigas, a un viaje de incertidumbres y sobresaltos que los llevaría, por caminos infestados de bandoleros e incómodas ventas y posadas, desde el Madrid ilustrado de Carlos III al París de los cafés, los salones, las tertulias filosóficas, la vida libertina y las agitaciones políticas en vísperas de la Revolución francesa. Basada en hechos y personajes reales, documentada con extremo rigor, conmovedora y fascinante en cada página, Hombres buenos narra la heroica aventura de quienes, orientados por las luces de la Razón, quisieron cambiar el mundo con libros, cuando el futuro arrinconaba las viejas ideas y el ansia de libertad hacía tambalearse tronos y mundos establecidos."
