--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 2024-01-19 14:00
+  text: "Terminando de leer «Hombres buenos» de Arturo Pérez-Reverte"
+  link: https://amzn.to/3HrvoCL
+  cat: 'read'
+
 - timestamp: 2023-10-29 07:15
   text: "Cronovisor: Antoni Gaudí, el arquitecto revolucionario"
   link: https://podcasts.apple.com/es/podcast/cronovisor-antoni-gaud%C3%AD-el-arquitecto-revolucionario/id356329864?i=1000632955665
@@ -148,7 +153,7 @@
   link: https://twitter.com/enriquebenimeli/status/1658913776391921666?s=46
   cat: thought
 
-- timestamp: 15/05/2023, 19:55:00 PM
+- timestamp: 15/05/2023, 20:41:00 PM
   text: "«Hipatia, la primera científica» de SER Historia: Hipatia de Alejandría fue la primera científica de la Historia. Hubo muchas más antes que ella, pero ella es la primera en guardar este galardón, y seguro que se lo mereció. Jesús Callejo nos transporta en su cronovisor a la Alejandría del siglo IV para conocerla."
   link: https://podcasts.apple.com/es/podcast/ser-historia/id356329864?i=1000612921655
   cat: podcast
@@ -157,11 +162,6 @@
   text: "Jesús Quintero entrevista a Arturo Pérez-Reverte (21 de febrero de 2006)"
   link: https://youtu.be/OUPj_nC7lf0
   cat: watch
-
-- timestamp: 07/05/2023, 14:00:00 PM
-  text: "«La fundación de Nueva York por los holandeses» del podcast Curiosidades de la Historia (National Geographic)"
-  link: https://podcasts.apple.com/es/podcast/curiosidades-de-la-historia-national-geographic/id1472737419?i=1000611860644
-  cat: podcast
 
 - timestamp: 06/05/2023, 14:00:00 PM
   text: "Terminé de leer «Terra Alta» de Javier Cercas. Una novela emocionante con una trama muy bien construida que entretiene e invita a la reflexión."
