--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 2024-01-21 14:00
+  text: "Nuevo post: «Gestión de tareas: ¿integral o por ámbitos? Mi experiencia con Microsoft To Do»"
+  link: https://www.ochoenpunto.com/gestion-tareas-integral-ambitos-experiencia-microsoft-to-do/
+  cat: 'status'
+
 - timestamp: 2024-01-19 14:00
   text: "Terminando de leer «Hombres buenos» de Arturo Pérez-Reverte"
   link: https://amzn.to/3HrvoCL
