--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 2024-01-24 19:00
+  text: "Nuevo post: «Automatización con Power Automate: cómo transformar publicaciones de Teams en tareas de Microsoft To Do»"
+  link: https://www.ochoenpunto.com/automatizacion-powerautomate-teams-tareas-microsoft-to-do/
+  cat: 'status'
+
 - timestamp: 2024-01-22 19:00
   text: "«We ALL depend on technology to communicate, to bank, and none of us know how to read and write code. It’s important for these kids, right now, starting at 8 years old, to read and write code.»"
   link: https://twitter.com/codeorg/status/1749129795126931871
@@ -6,7 +11,7 @@
 - timestamp: 2024-01-21 14:00
   text: "Nuevo post: «Gestión de tareas: ¿integral o por ámbitos? Mi experiencia con Microsoft To Do»"
   link: https://www.ochoenpunto.com/gestion-tareas-integral-ambitos-experiencia-microsoft-to-do/
-  cat: 'status'
+  cat: 'write'
 
 - timestamp: 2024-01-19 14:00
   text: "Terminando de leer «Hombres buenos» de Arturo Pérez-Reverte"
