--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,7 +1,12 @@
+- timestamp: 2024-01-30 14:00
+  text: "La ventana digital #1"
+  link: https://ebenimeli.substack.com/p/algoritmos-para-todos-letras-digitales
+  cat: 'status'
+
 - timestamp: 2024-01-24 19:00
   text: "Nuevo post: «Automatización con Power Automate: cómo transformar publicaciones de Teams en tareas de Microsoft To Do»"
   link: https://www.ochoenpunto.com/automatizacion-powerautomate-teams-tareas-microsoft-to-do/
-  cat: 'status'
+  cat: 'write'
 
 - timestamp: 2024-01-22 19:00
   text: "«We ALL depend on technology to communicate, to bank, and none of us know how to read and write code. It’s important for these kids, right now, starting at 8 years old, to read and write code.»"
