Substack icon top menu

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ author:
   instagram: ebenimeli # instagram username
   youtube: https://www.youtube.com/channel/UCcySEWq1InM_rbsvJY84zfQ # youtube username
   linkedin: ebenimeli # linkedin username
+  substack: ebenimeli
   #email: your-email@email.com # email adress
 
 # URL settings
