Boletín #4 in status

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 2024-04-04 15:00
+  text: "Boletín #4: «Innovación educativa sin pantallas, los supermercados del futuro y un libro jamás leído»"
+  link: https://ebenimeli.substack.com/p/innovacion-educativa-sin-pantallas
+  cat: 'status'
+
 - timestamp: 2024-03-31 15:00
   text: "Innovación educativa sin pantallas, los supermercados del futuro y un libro jamás leído (#4)"
   link: https://ebenimeli.substack.com/p/innovacion-educativa-sin-pantallas
